lustre/ptlrpc/client.c
@@ -3207,11 +3207,15 @@ void ptlrpc_set_bulk_mbits(struct ptlrpc_request *req)
 		__u64	old_mbits = req->rq_mbits;
 
 		if ((bd->bd_import->imp_connect_data.ocd_connect_flags &
-		    OBD_CONNECT_BULK_MBITS) != 0)
+		    OBD_CONNECT_BULK_MBITS) != 0) {
 			req->rq_mbits = ptlrpc_next_xid();
-		else /* old version transfers rq_xid to peer as matchbits */
-			req->rq_mbits = req->rq_xid = ptlrpc_next_xid();
-
+		} else {/* old version transfers rq_xid to peer as matchbits */
+			spin_lock(&req->rq_import->imp_lock);
+			list_del_init(&req->rq_unreplied_list);
+			ptlrpc_assign_next_xid_nolock(req);
+			req->rq_mbits = req->rq_xid;
+			spin_unlock(&req->rq_import->imp_lock);
+		}
 		CDEBUG(D_HA, "resend bulk old x"LPU64" new x"LPU64"\n",
 		       old_mbits, req->rq_mbits);
 	}
